[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Pause Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/CuteFont-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 2 )

[node name="Pause Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.588235, 0.588235, 0.588235, 0.392157 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -171.0
margin_top = 20.0
margin_right = 171.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 2

[node name="Menus" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -77.0
margin_right = 512.0
margin_bottom = 78.0
alignment = 1

[node name="Main Menu" type="VBoxContainer" parent="Menus"]
margin_left = 454.0
margin_right = 570.0
margin_bottom = 155.0

[node name="Resume" type="Button" parent="Menus/Main Menu"]
margin_right = 116.0
margin_bottom = 49.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0862745, 0.113725, 0.419608, 1 )
custom_colors/font_color_hover = Color( 0.254902, 0.278431, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 0.505882, 0.533333, 0.835294, 1 )
enabled_focus_mode = 0
text = "Resume"
flat = true

[node name="Controls" type="Button" parent="Menus/Main Menu"]
margin_top = 53.0
margin_right = 116.0
margin_bottom = 102.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0862745, 0.113725, 0.419608, 1 )
custom_colors/font_color_hover = Color( 0.254902, 0.278431, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 0.505882, 0.533333, 0.835294, 1 )
enabled_focus_mode = 0
text = "Controls"
flat = true

[node name="Quit" type="Button" parent="Menus/Main Menu"]
margin_top = 106.0
margin_right = 116.0
margin_bottom = 155.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0862745, 0.113725, 0.419608, 1 )
custom_colors/font_color_hover = Color( 0.254902, 0.278431, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 0.505882, 0.533333, 0.835294, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Quit"
flat = true

[connection signal="pressed" from="Menus/Main Menu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menus/Main Menu/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Menus/Main Menu/Quit" to="." method="_on_quit_pressed"]
